[package]
name = "tribler"
version = "0.0.1"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
description = "Library and a command-line interface for Tribler REST API"
license = "MIT/Apache-2.0"

[dependencies]
structopt = { version = "0.2.15", optional = true }
reqwest = "0.9.12"
serde = "1.0.89"
serde_derive = "1.0.89"
failure = "0.1.5"
byte-unit = { version = "1.1.0", optional = true }

[features]
default = ["bin"]
bin = ["structopt", "byte-unit"]
